syntax = "proto3";

package com.bball.common;

option java_multiple_files = true;
option java_package = "com.bball.common.grpc";

service AuthService {
  rpc verifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  string userId = 2;
  string email = 3;
}